[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/demo/editor/creature-old/tweak-dna-button.gd" type="Script" id=2]
[ext_resource path="res://assets/demo/editor/creature-old/edit.png" type="Texture" id=3]
[ext_resource path="res://src/demo/editor/creature-old/tweak-eye-row.gd" type="Script" id=4]

[node name="EyeColor" type="HBoxContainer"]
margin_top = 124.0
margin_right = 306.0
margin_bottom = 150.0
custom_constants/separation = 10
script = ExtResource( 4 )
creature_editor_path = NodePath("../../../../..")

[node name="Label" type="Label" parent="."]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 1 )
text = "Eye Color:"
align = 2

[node name="Edit1" type="ColorPickerButton" parent="."]
pause_mode = 2
margin_left = 110.0
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 40, 0 )
theme = ExtResource( 1 )
color = Color( 0.8, 0.32, 0.32, 1 )

[node name="Edit2" type="ColorPickerButton" parent="."]
pause_mode = 2
margin_left = 160.0
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 40, 0 )
theme = ExtResource( 1 )
color = Color( 0.8, 0.32, 0.32, 1 )

[node name="DnaMargin" type="MarginContainer" parent="."]
margin_left = 210.0
margin_right = 236.0
margin_bottom = 26.0
custom_constants/margin_top = 1
custom_constants/margin_bottom = -1

[node name="Dna" type="Button" parent="DnaMargin"]
margin_top = 1.0
margin_right = 26.0
margin_bottom = 27.0
rect_min_size = Vector2( 26, 26 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="DnaMargin/Dna"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 3 )
expand = true

[connection signal="color_changed" from="Edit1" to="." method="_on_Edit_color_changed"]
[connection signal="popup_closed" from="Edit1" to="." method="_on_Edit_popup_closed"]
[connection signal="pressed" from="Edit1" to="." method="_on_Edit_pressed"]
[connection signal="color_changed" from="Edit2" to="." method="_on_Edit_color_changed"]
[connection signal="popup_closed" from="Edit2" to="." method="_on_Edit_popup_closed"]
[connection signal="pressed" from="Edit2" to="." method="_on_Edit_pressed"]
[connection signal="button_down" from="DnaMargin/Dna" to="DnaMargin/Dna" method="_on_button_down"]
[connection signal="button_up" from="DnaMargin/Dna" to="DnaMargin/Dna" method="_on_button_up"]
[connection signal="pressed" from="DnaMargin/Dna" to="." method="_on_Dna_pressed"]
